<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F7AC5"
    tools:context=".Register">

    <Button
        android:id="@+id/button"
        android:layout_width="332dp"
        android:layout_height="63dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#02053C"
        android:text="Register"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="341dp"
        android:layout_height="282dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_marginTop="456dp"
        android:backgroundTint="@color/bluedark"
        android:ems="10"
        android:hint="@string/usrnme"
        android:inputType="text"
        android:textColorLink="#0B1547"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/imageView32"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        app:srcCompat="@drawable/baseline_person_outline_24" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/bluedark"
        android:ems="10"
        android:hint="@string/pw"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/baseline_lock_24" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_local_phone_24" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_drive_file_rename_outline_24" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:layout_marginTop="320dp"
        android:backgroundTint="@color/bluedark"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/imageView35"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/bluedark"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/imageView34"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

</androidx.constraintlayout.widget.ConstraintLayout>